# Pochurl

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-app.yml
bruno/: API - Add element.bru  API - Get element from its id.bru  API - Get elements.bru  bruno.json
pochurl/: __init__.py  api.py  importer.py  main.py  ui.py
pochurl/core/: __init__.py  storage.py  storage_firestore.py  storage_tinydb.py
pochurl/domain/: __init__.py  element.py  form.py  response.py
tests/: test_api.py  test_importer.py  test_main.py  test_ui.py
