[tool.poetry]
name = "pochurl"
version = "0.1.0"
description = ""
authors = ["Gudsfile <gudsfile@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
tinydb = "^4.8.0"
google-cloud-firestore = "^2.16.0"
firebase-admin = "^6.5.0"
pytest = "^8.2.0"
fastui = "^0.6.0"
pylint = "^3.1.0"
black = "^24.4.2"

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:.*MapContainer.*is deprecated*:DeprecationWarning',
]

[tool.black]
line-length = 160

[tool.pylint.'MESSAGES CONTROL']
disable = """
    C0114,
    C0115,
    C0116,
    C0301
"""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
